--- a/public/index.html
+++ b/public/index.html
@@ -3,22 +3,22 @@
 
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-    <script async="" src="./assets/formreactor.js"></script>
+    <script async="" src="assets/formreactor.js"></script>
     <!--<script type="text/javascript" async="" src="./assets/churnzero-v2.0.100.js"></script>-->
-    <script async="" src="./assets/analytics.js"></script>
+    <script async="" src="assets/analytics.js"></script>
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport"
           content="width=device-width, initial-scale=1, maximum-scale=1, minimum-scale=1, user-scalable=no">
     <link rel="preconnect" href="https://fonts.googleapis.com/">
-    <link href="./assets/css" rel="stylesheet" type="text/css">
+    <link href="assets/css" rel="stylesheet" type="text/css">
     <script>
     </script>
     <!--<script>-->
-    <!--try {-->
-    <!--var html = document.getElementsByTagName("html")[0];-->
-    <!--if (html.className.indexOf("dark") === -1 && localStorage.getItem('ctm.theme') === "dark") html.className += " dark";-->
-    <!--} catch (e) {-->
-    <!--}-->
+      <!--try {-->
+        <!--var html = document.getElementsByTagName("html")[0];-->
+        <!--if (html.className.indexOf("dark") === -1 && localStorage.getItem('ctm.theme') === "dark") html.className += " dark";-->
+      <!--} catch (e) {-->
+      <!--}-->
     <!--</script>-->
     <meta name="msapplication-TileColor" content="#FFFFFF">
 
