--- a/public/index.html
+++ b/public/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
     <script async="" src="assets/formreactor.js"></script>
-    <!--<script type="text/javascript" async="" src="./assets/churnzero-v2.0.100.js"></script>-->
+    <script type="text/javascript" async="" src="./assets/churnzero-v2.0.100.js"></script>
     <script async="" src="assets/analytics.js"></script>
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport"
@@ -43,9 +43,8 @@
         }
     </style>
     <meta name="theme-color" content="#000000">
-    <link rel="stylesheet" href="../../sample_files/csm_panel_styles.css">
 </head>
-<body id="calls-index" class="app application headeron calls index toolbar ctm-no-swap">
+<body class="app application headeron calls index toolbar ctm-no-swap">
 <div id="root"></div>
 </body>
 </html>
